# project1_makarova_maria

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
