[tool.poetry]
name = "project1-makarova-maria"
version = "0.1.0"
description = ""
authors = ["Maria Makarova <rebecca.castle2000@gmail.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
