[tool.poetry]
name = "project1-makarova-maria"
version = "0.1.1"
description = ""
authors = ["Maria Makarova <rebecca.castle2000@gmail.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


